--- a/style.css
+++ b/style.css
@@ -2,5 +2,62 @@ body {
 
     background-color: brown;
 
+    html,
+body {
+  margin: 0;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+}
+
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+/* Panel Defaults */
+.panel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  position: relative;
+  box-sizing: border-box;
+
+  padding: 3em;
+}
+
+.one {
+  background: #fff;
+}
+
+.two {
+  background: sky blue;
+  
+}
+
+.three {
+  background: #bdc3c7;
+}
+
+.four {
+  background: #7b7d7d;
+}
+
+.five {
+  background: #333;
+}
+
+.three p {
+  letter-spacing: 100px;
+}
+
+.six {
+/* transform: translateX(-300px) */
+  translateX: -500px; 
+
     
 }
